# CompMath

./: CMakeLists.txt
3_Degree_Polynomial_Solver/: main.cpp
